--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "fcc-learn-npm-package-json",
 	"dependencies": {
-		"express": "^4.14.0"
+		"express": "^4.14.0",
+		"fcc-learn-npm-package-json": "file:"
 	},
 	"main": "server.js",
 	"scripts": {
