--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
 	"name": "fcc-learn-npm-package-json",
+	"author": "Eliud Njoroge Ndungu",
 	"dependencies": {
 		"express": "^4.14.0",
 		"fcc-learn-npm-package-json": "file:"
